documented msg endpoint + update readme + update changelog
